# esa-sql-project

./: .gitignore  README.md  chainlit.md  demo_offline.md  docker-compose.yaml  pyproject.toml
docs/: demo.md  demo_offline.md
scripts/: cli.py  create_postgres.py  fill_comments.py  postgres_ingestion.py  qdrant_ingestion.py  ui.py
sql/: init.sql  queries_example.sql
sql/utils/: load_nl_sql_pairs.py  metadata_general_query.py
src/: logger.py
src/ingestion/: loader.py  refiner.py
src/sql_agent/: agent.py  context.py  prompts.py  tools.py
src/sql_agent/rag/: embedder.py  sql_rag.py
src/sql_agent/utils/: base_context.py  esa_agent.py  handoff.py  repl.py
test/: bbox_map.html  esa_api_test.py  geo_loc.py
